fix cms loader on tablet and mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1081,7 +1081,7 @@ body #newplugin-cont.show-menu{
 .page-overlay-loader {
     display: block;
     max-width: 500px;
-    margin: 6rem auto 10rem;
+    margin: 8rem auto 10rem;
 }
 .page-overlay-loader .page-overlay-loader-text {
     width: inherit;
@@ -1127,6 +1127,27 @@ body #newplugin-cont.show-menu{
         height: 71px;
     }
 }
+/* For tablet */
+/* Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .page-overlay-loader {
+        margin-top: 7rem;
+    }
+}
+/* Portrait */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px) 
+  and (orientation: portrait) 
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .page-overlay-loader {
+        margin-top: 6rem;
+    }
+}
 @media (max-width: 767px) {
     .iframe-container .widget.widget-tabs.widget-tabs-responsive > .widget-head ul.nav-tabs li {
         border-bottom: 1px solid #e5e5e5;
@@ -1135,6 +1156,17 @@ body #newplugin-cont.show-menu{
     }
     .iframe-container .widget.widget-tabs.widget-tabs-responsive > .widget-head ul.nav-tabs li a {
         border-bottom: 0;
+    }
+    .page-overlay-loader {
+        margin-top: 4rem;
+    }
+}
+@media (max-width: 375px) {
+    .page-overlay-loader .page-overlay-loader-text {
+        margin-top: -3rem;
+    }
+    .page-overlay-loader {
+        margin-top: 6rem;
     }
 }
 @-webkit-keyframes spinning-cog {
